<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.esiea.leholloco_mariaseelan.projetandroid.MainActivity"

    >






    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/londres"
        android:text="@string/londres"
        android:onClick="parametres"
        android:visibility="visible"/>

    <Button
        android:text="@string/clique"
        android:onClick="fct"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/clique"
        android:layout_below="@id/londres"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
     />

    <Button
        android:text="@string/newbutton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"


        android:id="@+id/newbutton"
        android:onClick="fonction"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/clique"
        android:visibility="visible"
        />

    <Button
        android:id="@+id/music"
        android:text="@string/music"
        android:layout_width="100dp"
        android:layout_height="wrap_content"


        android:onClick="mus"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/newbutton"
        android:visibility="visible"
        />

    <Button
        android:id="@+id/retour"
        android:text="@string/retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:visibility="invisible"
        android:onClick="fct"

        />


    <android.support.v7.widget.RecyclerView
        android:visibility="invisible"

        android:id="@+id/rv_bieres"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"></android.support.v7.widget.RecyclerView>

</RelativeLayout>
